# PI-GINOT-DogBone

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  app.yaml  config.py  docker-compose.yml  evaluate_all_val.py  main.py  pyproject.toml  requirements-external.txt  requirements.txt  showcase_gif_v2.py  write_out.py  write_out_code.py
agent/: __init__.py  agent.py  constants.py  gates.py  health_check.py  inference.py  refinement.py  reliability.py  schemas.py  verification.py
checkpoints/: history.json
geometry/: __init__.py  collocation.py  parametric_dogbone.py
llm_agents/: Home.py  __init__.py  requirements.txt
llm_agents/agents/: __init__.py  agent_diagnostician.py  agent_optimizer.py  agent_predictor.py  agent_reporter.py  cache_nodes.py  callbackhandler.py  long_term_memory.py  network_components.py  semantic_cache.py  short_term_memory.py  tools.py
llm_agents/pages/: 1_Analyst.py  2_Design_Studio.py
models/: __init__.py  geometry_encoder.py  physics_decoder.py  pi_ginot.py
models/modules/: __init__.py  point_encoding.py  point_position_embedding.py  pointnet2_utils.py  transformer.py
physics/: __init__.py  equilibrium.py  losses.py  neo_hookean.py
training/: __init__.py  curriculum.py  trainer.py
